--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,14 @@ dependencies:
 
   mongo_dart: ^0.10.0
   crypto: ^3.0.1
-
+  font_awesome_flutter: ^9.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   mailer: ^6.0.1
   top_snackbar_flutter: ^3.1.0
+  country_state_city_picker: ^1.0.1
     
 
 dev_dependencies:
@@ -67,7 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   
   assets:
-    - assets/logo.jpg
+    - assets/images/
 
   
   
