--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   mailer: ^6.0.1
   top_snackbar_flutter: ^3.1.0
-    
+  curved_navigation_bar: ^1.0.3
+  toggle_switch: ^2.1.0
 
 dev_dependencies:
   flutter_test:
