update projrcts page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   toggle_switch: ^2.1.0
   country_state_city_picker: ^1.0.1
-    
+  bson: ^5.0.3  
+  country_icons: ^3.0.0
 
 dev_dependencies:
   flutter_test:
